keymap export/import error. #37747

Closed
opened 2013-12-09 03:25:04 +01:00 by Massimiliano Puliero · 8 comments

System Information
win7 64 quadroFX1700

Blender Version
broken in a24f838
broken in official 2.69 too

Short description of error
I exported my keymap but when I try to import it on same Blender but different pc, the keymap doesnt work correctly.

Exact steps for others to reproduce the error
import the attached

MaxPuliero131209_v01.py

**System Information** win7 64 quadroFX1700 **Blender Version** broken in a24f838 broken in official 2.69 too **Short description of error** I exported my keymap but when I try to import it on same Blender but different pc, the keymap doesnt work correctly. **Exact steps for others to reproduce the error** import the attached [MaxPuliero131209_v01.py](https://archive.blender.org/developer/F37679/MaxPuliero131209_v01.py)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

This issue was referenced by blender/blender-addons-contrib@79288a35fa

This issue was referenced by blender/blender-addons-contrib@79288a35fa6cb3461e274724836245d2b6bb6833

This issue was referenced by 79288a35fa

This issue was referenced by 79288a35fa6cb3461e274724836245d2b6bb6833

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 79288a35fa.

Closed by commit 79288a35fa.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37747
No description provided.