Fix T37747: keymap import error with region timers.